= Mechanize CHANGELOG

=== Unreleased

* New Features
  * Allow passing a `Form::FileUpload` instance to `#post`. #350 by Sam
    Rawlins.
  * Capture link when scheme is unsupported. #362 by Jon Rowe.
  * Pre-defined User-Agent stings are updated to those of more recent versions, and new aliases for IE 10/11 are added.
  * Support for mime-types 1.x is restored while keeping compatible with mime-types 2.x.
  * Mechanize::Page now responds to #xpath, #css, #at_xpath, #at_css, and #%.
  * element(s)_with methods now accept :xpath and :css options for doing xpath/css
    selector searching.

=== 2.7.3

* New Features
  * Allow net-http-persistent instance to be named. #324, John Weir.
  * #save and #save! return filename #340
  * Updated mime-types requirement to 2.x versions.  #348 by Jeff Nyman.

* Bug fix
  * Ensure Download#save! defaults back to original filename if
    none is provided (#300)

=== 2.7.2

* Bug fix
  * API compatibility issues with Mechanize::CookieJar cookies has been
    addressed.  https://github.com/sparklemotion/http-cookie/issues/2 #326

=== 2.7.1

* Bug fix
  * Ensure images with no "src" attribute still return correct URLs. #317
  * Fixes Mechanize::Parser#extract_filename where an empty string filename
    in the response caused unhandled exception. #318

=== 2.7.0

* New Features
  * Mechanize::Agent#response_read will now raise a
    Mechanize::ResponseReadError instead of an EOFError and avoid losing
    requested content. #296.
  * Depend on http-cookie, add backwards compatible deprecations.
    #257 Akinori MUSHA.
  * Added `Download#save!` for overwriting existing files. #300 Sean Kim.

* Bug fix
  * Ensure page URLs with whitespace in them are escaped #313 @pacop.
  * Added a workaround for a bug of URI#+ that led to failure in resolving a relative path containing double slash like "/../http://.../". #304

=== 2.6.0

* New Features
  * Mechanize#start and Mechanize#shutdown (Thanks, Damian Janowski!)