@@ -8,11 +8,64 @@ class Mechanize::Util
   #   Mechanize::Util::DefaultMimeTypes.replace(mimetab)
   DefaultMimeTypes = WEBrick::HTTPUtils::DefaultMimeTypes
 
-  def self.build_query_string(parameters, enc = nil)
-    parameters.map { |k,v|
-      # WEBrick::HTTP.escape* has some problems about m17n on ruby-1.9.*.
-      [CGI.escape(k.to_s), CGI.escape(v.to_s)].join("=") if k
-    }.compact.join('&')
+  class << self
+    # Builds a query string from a given enumerable object
+    # +parameters+.  This method uses Mechanize::Util.each_parameter
+    # as preprocessor, which see.
+    def build_query_string(parameters, enc = nil)
+      each_parameter(parameters).inject(nil) { |s, (k, v)|
+        # WEBrick::HTTP.escape* has some problems about m17n on ruby-1.9.*.
+        (s.nil? ? '' : s << '&') << [CGI.escape(k.to_s), CGI.escape(v.to_s)].join('=')
+      } || ''
+    end
+
+    # Parses an enumerable object +parameters+ and iterates over the
+    # key-value pairs it contains.
+    #
+    # +parameters+ may be a hash, or any enumerable object which
+    # iterates over [key, value] pairs, typically an array of arrays.
+    #
+    # If a key is paired with an array-like object, the pair is
+    # expanded into multiple occurrences of the key, one for each
+    # element of the array.  e.g. { a: [1, 2] } => [:a, 1], [:a, 2]
+    #
+    # If a key is paired with a hash-like object, the pair is expanded
+    # into hash-like multiple pairs, one for each pair of the hash.
+    # e.g. { a: { x: 1, y: 2 } } => ['a[x]', 1], ['a[y]', 2]
+    #
+    # An array-like value is allowed to be specified as hash value.
+    # e.g. { a: { q: [1, 2] } } => ['a[q]', 1], ['a[q]', 2]
+    #
+    # For a non-array-like, non-hash-like value, the key-value pair is
+    # yielded as is.
+    def each_parameter(parameters, &block)
+      return to_enum(__method__, parameters) if block.nil?
+
+      parameters.each { |key, value|
+        each_parameter_1(key, value, &block)
+      }
+    end
+
+    private
+
+    def each_parameter_1(key, value, &block)
+      return if key.nil?
+
+      case
+      when s = String.try_convert(value)
+        yield [key, s]
+      when a = Array.try_convert(value)
+        a.each { |avalue|
+          yield [key, avalue]
+        }
+      when h = Hash.try_convert(value)
+        h.each { |hkey, hvalue|
+          each_parameter_1('%s[%s]' % [key, hkey], hvalue, &block)
+        }
+      else
+        yield [key, value]
+      end
+    end
   end
 
   # Converts string +s+ from +code+ to UTF-8.
